[ios] Fix content inset behavior in recent tabs in tab grid

Previously, the section header in recent tabs in tab grid was a little
low, and content would scroll up behind the section header.

This CL fixes that by adjusting the content inset behavior so that the
section header is flush up against the top toolbar.

Bug: 852721
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I1ab1f2f926b41cc7c874fc8b2250163b90bc4615
Reviewed-on: https://chromium-review.googlesource.com/1102194
Reviewed-by: edchin <edchin@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567594}
Former-commit-id: 5b7c5a3f819d31e467ef6999222dc40aea7e170c